--- a/challenges/templates/challenges.html
+++ b/challenges/templates/challenges.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>This month</title>
   </head>
   <body>
     <h1>This month challenges</h1>
-    <p>Learn to django</p>
+    <p>{{ text }}</p>
   </body>
 </html>
