--- a/challenges/templates/challenges.html
+++ b/challenges/templates/challenges.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>This month challenges</h1>
-    <p>{{ text }}</p>
+    <!-- <p>{{ text }}</p> -->
+    <p>Hello</p>
   </body>
 </html>
+
+Django Template language DTL
