--- a/challenges/templates/challenges.html
+++ b/challenges/templates/challenges.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>This month challenges</h1>
-    <!-- <p>{{ text }}</p> -->
-    <p>Hello</p>
+    <p>Username: {{username}}</p>
+    <p>Age:{{age}}</p>
   </body>
 </html>
 
-Django Template language DTL
+<!-- Django Template language DTL -->
