--- a/challenges/templates/challenges.html
+++ b/challenges/templates/challenges.html
@@ -6,9 +6,8 @@
     <title>This month</title>
   </head>
   <body>
-    <h1>This month challenges</h1>
-    <p>Username: {{username}}</p>
-    <p>Age:{{age}}</p>
+    <h1>This month challenge</h1>
+    <p>{{ challenge_text }}</p>
   </body>
 </html>
 
