--- a/challenges/templates/index.html
+++ b/challenges/templates/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      {% for month in months %}
+      <li>
+        <a href="{% url 'monthly' month %}">{{month}}</a>
+      </li>
+      {% endfor %}
+    </ul>
+  </body>
 </html>
