--- a/challenges/templates/index.html
+++ b/challenges/templates/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <ul>
-      {% for month in months %}
-      <li>
-        <a href="{% url 'monthly' month %}">{{month}}</a>
-      </li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends "base.html" %}
+
+
+{% block title %}The month'challenges{% endblock %} 
+
+
+{% block content %}
+
+  {% include "includes/header.html" %}
+
+  <ul>
+  {% for month in months %}
+  <li>
+    <a href="{% url 'monthly' month %}">{{month}}</a>
+  </li>
+  {% endfor %}
+  </ul>
+
+{% endblock content %}
