--- a/challenges/templates/index.html
+++ b/challenges/templates/index.html
@@ -1,7 +1,26 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
+{% load static %}
+
+{% block title %}
+  The month'challenges
+{% endblock %}
 
 
-{% block title %}The month'challenges{% endblock %} 
+{% block static_links %}
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+    defer
+  ></script>
+   <link rel="stylesheet" href="{% static 'styles.css' %}" />
+{% endblock %}
 
 
 {% block content %}
@@ -9,11 +28,11 @@
   {% include "includes/header.html" %}
 
   <ul>
-  {% for month in months %}
-  <li>
-    <a href="{% url 'monthly' month %}">{{month}}</a>
-  </li>
-  {% endfor %}
+    {% for month in months %}
+    <li>
+      <a href="{% url 'monthly' month %}">{{month}}</a>
+    </li>
+    {% endfor %}
   </ul>
 
 {% endblock content %}
