--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,40 +1,27 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block title %} My blog {% endblock title %} {%
+block css_files %} {% comment %} Bootstrap 5 {% endcomment %}
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+  crossorigin="anonymous"
+/>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"
+></script>
 
-{% block title %}
-    My blog
-{% endblock title %}
+{% comment %} Font icons {% endcomment %} {% comment %} Google font {%
+endcomment %} {% endblock css_files %} {% block content %}
 
+<main class="mx-5">
+  <header>{% include "includes/header.html" %}</header>
 
-{% block css_files %}
-    {% comment %} Bootstrap 5 {% endcomment %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <div class="banner">banner</div>
+  <div class="post__content">Latest blog posts</div>
 
-    {% comment %} Font icons {% endcomment %}
-    {% comment %} Google font {% endcomment %}
-{% endblock css_files %}
-
-
-{% block content %}
-   
-    <main class="mx-5">
-        <header>
-            {% include "includes/header.html" %}
-        </header>
-
-        <div class="banner">
-            banner
-        </div>
-        <div class="post__content">
-            Latest blog posts
-        </div>
-
-        
-        <footer>
-            {% include "includes/footer.html" %}
-        </footer>
-
-    </main>
-
+  <footer>{% include "includes/footer.html" %}</footer>
+</main>
 
 {% endblock content %}
