--- a/blog/templates/includes/header.html
+++ b/blog/templates/includes/header.html
@@ -1,4 +1,4 @@
-<nav class="container navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button
