--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} {% endblock %}</title>
     {% block css_files %} {% endblock css_files %}
+    <link rel="stylesheet" href="{% static 'app.css' %}">
   </head>
   <body>
     {% block content %}{% endblock content %}
