--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -14,6 +14,7 @@
   border: 1px solid rgba(0, 100, 178, 0.8);
   color: white;
   font-weight: 600;
+  background-color: #5315c7;
 }
 
 .btn:hover {
