--- a/blog/templates/includes/header.html
+++ b/blog/templates/includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+  <div class="container-fluid mx-5">
+    <a class="navbar-brand" href="#"><b>Travel</b></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -21,15 +21,18 @@
           <a class="nav-link" href="#">Blogs</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+    </div>
+    <form class="mx-5 2 w-50">
+      <input
+        class="form-control me-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+    </form>
+    <div class="">
+      <button class="btn btn-dark">Sign in</button>
+      <button class="btn btn-success">Sign up</button>
     </div>
   </div>
 </nav>
