--- a/blog/templates/includes/post.html
+++ b/blog/templates/includes/post.html
@@ -1,19 +1,19 @@
 {% load static %}
 
 <div class="card" style="width: 18rem">
-   <a href="{% url 'post_detail' {{ post.slug  %}">
+   <a href="{% url 'post_detail' post.slug   %}">
        <img
-      src="{% static "images/post-1.jpg" } %}"
+      src="{% static "images/"|add:post.image } %}"
       class="card-img-top"
       alt="..."
     />
    </a>
   <div class="card-body">
     
-    <h5 class="card-title">{{ post.title }}</h5>
+    <h5 class="card-title">{{ post.title|slice:"0:50" }}...</h5>
     <i> by {{ post.author}}</i>
     <p class="card-text">
-     {{ post.content }}
+     {{ post.content|slice:"0:150" }}...
     </p>
     <a href="#" class="btn btn-primary">Explore</a>
   </div>
