--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -4,35 +4,35 @@
 {% block title %} My blog {% endblock title %} 
  
 {% block css_files %}
-<link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-  crossorigin="anonymous"
-/>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-  crossorigin="anonymous"
-></script>
-<link ref="stylesheet" href="{% static "css/index.css" %}">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+  ></script>
+  <link ref="stylesheet" href="{% static "css/index.css" %}">
 
 {% endblock css_files %} 
 
 
 {% block content %}
 
-<main class="">
-  <header>{% include "includes/header.html" %}</header>
+<header>{% include "includes/header.html" %}</header>
+<main class="container">
 
   <div class="banner">
     <h2 class="heading">Danny'Blog</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti.</p>
     <button class="btn">Explore</button>
   </div>
-  <section>
-    <h3 class="heading">Latest posts</h3>
-    <div class="post">
+  <section class="">
+    <h3 class="text-center my-4">Latest posts</h3>
+    <div class="d-flex gap-5 justify-content-center">
       {% for post in latest_post %}
          {% include "includes/post.html" %}  
       {% endfor %}
